<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    >


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp">

        <TextView
            android:id="@+id/header_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/item_detail_label"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subheader_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subheader_label"
            android:layout_marginTop="5dp"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:id="@+id/barcode_string"
                android:hint="@string/barcode_label"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:id="@+id/name_string"
                android:hint="@string/name_lbl"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/type_string"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:hint="@string/type_lbl" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:id="@+id/company_string"
                android:hint="@string/company_lbl"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:id="@+id/numberAdded_string"
                android:hint="@string/number_added_lbl"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/item_used_label"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:id="@+id/item_used_switch"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:id="@+id/productID_string"
                android:hint="@string/product_id_lbl"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:id="@+id/lotNumber_string"
                android:hint="@string/lot_number_lbl"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expiration_date_string2"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="custom"
            app:endIconTint="@color/colorPrimary"
            app:endIconDrawable="@drawable/calendar">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:id="@+id/expiration_date_string"
                android:hint="@string/expiration_date_lbl"
                android:clickable="true"
                android:focusable="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:id="@+id/quantity_string"
                android:hint="@string/quantity_lbl"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:id="@+id/siteLocation_string"
                android:hint="@string/site_location_lbl"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:id="@+id/physicallocation_string"
                android:hint="@string/physical_location_label"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/clock"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:id="@+id/datetime_string"
                android:hint="@string/dateTime_label"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:id="@+id/notes_string"
                android:hint="@string/notes_lbl"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="320dp"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/rescan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_alignParentEnd="true"
                android:text="@string/rescan_items_lbl"
                style="?attr/materialButtonOutlinedStyle"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="320dp"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back_imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:backgroundTint="@color/colorPrimaryDark"
                android:contentDescription="back_button"
                app:srcCompat="@android:drawable/ic_menu_revert" />

            <Button
                android:id="@+id/saveChanges_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:text="@string/save_changes_lbl" />


        </RelativeLayout>
    </LinearLayout>
</ScrollView>
